factory: experiment 9 — node-scoped agents (KEEP, PR #26)