@@ -1,50 +1,518 @@
 # Interaction Study — buildroot-reconstructor
 
-Analyzed 16 conversation log(s), 63 relevant messages.
+Analyzed 249 conversation log(s), 451 relevant messages.
 
-## User Messages (13)
+## User Messages (108)
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error `stage 1 requires a FROM instruction ("")`, the problem is that extraneous content (the markdown explanati
+- Research solutions for Maven build failures, focusing on the dominant error pattern: unknown. Use web search to find relevant solutions, best practices, and debugging techniques. Produce a concise res
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Here is the corrected Containerfile:
+
+```
+FROM docker.io/library/gradle:8-jdk17
+
+WORKDIR /build
+
+RUN git clone --depth 1 --bran
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error and dead-end registry:
+
+1. **Error**: "stage 1 requires a FROM instruction" — likely the file has invisibl
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the errors:
+
+1. **No POM found**: Micrometer is a **Gradle** project, not Maven. The repo has `build.gradle` and a G
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Now I understand the full picture. The "stage 1 requires a FROM instruction" is a persistent parsing issue across multiple base
 - Fix 2 failing tests on PR #18 in akashgit/buildroot-reconstructor.
 
 The J-score formula was changed to use log(1 + s_start + 0.01) instead of log(1 + s_start), but the tests weren't updated:
 
 1. tests
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error and constraints:
+
+1. **Error**: "stage 1 requires a FROM instruction" — caused by non-Dockerfile text befo
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The file is now clean — starts with `FROM` at byte 0, no BOM, no markdown prose, no code fences. Here's the corrected Container
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at this, the issue is clear:
+
+1. **"stage 1 requires a FROM instruction"** — the Containerfile likely has markdown code
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Now I have all the information I need. The key issues are:
+
+1. The error "stage 1 requires a FROM instruction" means the file h
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The error `stage 1 requires a FROM instruction ("")` means there are invisible/non-printable characters before the `FROM` line 
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error and the dead-end registry, the issue is twofold:
+1. The original file had a preamble text line before the 
 - Final archive for this factory cycle on /Users/akash/factory-projects/buildroot-reconstructor.
 1. Read full experiment history: factory history /Users/akash/factory-projects/buildroot-reconstructor
 2.
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error, "stage 1 requires a FROM instruction" is caused by trailing content being parsed as a second build stage.
 - Fix code review issues on PR #18 in akashgit/buildroot-reconstructor.
 The CEO found the following issues in the final review:
 
 1. [Bug] src/buildroot/agent/outer_loop.py:~499 — _get_git_diff() uses 'g
+- Context analysis for /Users/akash/factory-projects/buildroot-reconstructor focused on the Claude Code agent migration (issue #19).
+
+Read backlog at .factory/strategy/backlog.md.
+Read the full issue sp
+- Implement this code change hypothesis: Error-class fixes have stagnated. Shifting to structural changes. Previously tried: none
+
+Target error class: architectural
+Files to modify: src/buildroot/agent/
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The corrected Containerfile is now in place. Here's the summary of the fix:
+
+**Root cause:** The previous Containerfile contain
+- Record successful E2E validation for experiment 8.
+
+The agentic reconstructor was run end-to-end on rh-h100-01 for org.apache.commons:commons-lang3:3.14.0 after the Claude Code agent migration (exp 8)
+- Analyze the failure patterns and propose a CodeChangeHypothesis. Return a JSON object with: target_error_class, files_to_modify, expected_impact, rationale, and priority (integer).
+- Record the Researcher's findings for the Claude Code agent migration (issue #19) at /Users/akash/factory-projects/buildroot-reconstructor.
+Read .factory/strategy/research-local.md, .factory/strategy/r
+- External research for /Users/akash/factory-projects/buildroot-reconstructor focused on Claude Code subprocess spawning patterns.
+
+Read the issue spec at .factory/strategy/current.md to understand what
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Now I understand the full picture. The Dockerfile on disk literally contains the markdown explanation and code fences — the ext
+- Fix 1 code review issue on PR #21 in akashgit/buildroot-reconstructor.
+
+The final review found an issue in _outer_builder_implement():
+
+1. [Bug] src/buildroot/agent/outer_loop.py:384-453 — Untracked f
+- Record experiment 8 outcome (verdict: keep) for /Users/akash/factory-projects/buildroot-reconstructor.
+1. Read experiment history: factory history /Users/akash/factory-projects/buildroot-reconstructor
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error, the issue is that prose/explanatory text before the `FROM` instruction got included in the Containerfile.
 - Record the Researcher's findings for the outer loop research at /Users/akash/factory-projects/buildroot-reconstructor.
 Read .factory/strategy/research.md and .factory/reviews/ceo-verdict-researcher.md
+- Implement this code change hypothesis: Error-class fixes have stagnated. Shifting to structural changes. Previously tried: none
+
+Target error class: architectural
+Files to modify: src/buildroot/agent/
+- CRITICAL FEEDBACK FROM USER — Record this immediately.
+
+The CEO failed to run an actual E2E test of the agentic reconstructor after experiment 8 (Claude Code agent migration). The excuses given were t
 - Record the Builder's work for experiment 7.
 Read .factory/reviews/ceo-verdict-builder.md and the PR diff (gh pr diff 18).
 Write implementation notes to .factory/archive/. Then run: factory report-upda
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The error `stage 1 requires a FROM instruction ("")` means there are invisible/non-printable characters before the `FROM` line 
 - Fix 2 code review issues on PR #18 in akashgit/buildroot-reconstructor.
 The CEO found the following issues in iteration 1:
 
 1. [scope] packages_smoke.txt:1 — Root-level packages_smoke.txt is a duplica
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+FROM docker.io/library/eclipse-temurin:17-jdk-jammy
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The error `stage 1 requires a FROM instruction ("")` means there are invisible/non-printable characters before the `FROM` line 
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Confirmed: Gradle project using Gradle 8.4 wrapper. Now here's the corrected Containerfile:
+
+```
+# ============================
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Now I understand the problem. Micrometer is a **Gradle** project (not Maven). There's no `pom.xml` — it has `build.gradle`, `gr
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error, the problem is clear: the previous Containerfile had non-Dockerfile prose text before the `FROM` instruct
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error and the dead-end registry, the root problem is **not** the base image — the same "stage 1 requires a FROM 
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The error `stage 1 requires a FROM instruction ("")` means the Containerfile on disk contains the markdown prose/code fences fr
+- Run the FULL intelligent outer loop on all 3 test packages. This is the real deal — let the system self-improve.
+
+This is an OPERATIONAL task. You are EXECUTING the self-improving pipeline, not writin
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+FROM docker.io/library/eclipse-temurin:17-jdk-jammy
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Now I have a clear picture of all the issues. Here's the corrected Containerfile:
+
+1. **Root cause of parse error**: `` — GHA e
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Confirmed — this is a Gradle project. Here's the corrected Containerfile:
+
+```
+# ==============================================
+- Record the Strategist's decisions and CEO approval. Read .factory/strategy/current.md and .factory/reviews/ceo-verdict-strategist.md. Write a strategy snapshot to .factory/archive/strategies/. Update 
+- Resolve merge conflicts in /Users/akash/factory-projects/buildroot-reconstructor.
+
+The branch feat/outer-loop-17 (PR #21 — Claude Code agent migration) has merge conflicts with origin/main after PR #1
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Here's the corrected Containerfile with three fixes:
+
+1. **Wrong build tool → Gradle**: Micrometer is a Gradle project (has `bu
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The error `stage 1 requires a FROM instruction ("")` means there's non-Dockerfile content (prose text) before the `FROM` line. 
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+FROM docker.io/library/eclipse-temurin:17-jdk-jammy
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The corrected Containerfile is:
+
+```
+FROM docker.io/library/gradle:8-jdk17
+
+WORKDIR /build
+
+RUN git clone --depth 1 --branch v1
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Now I have a clear picture. Here's the corrected Containerfile:
+
+```
+FROM docker.io/library/amazoncorretto:17
+
+RUN yum install 
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Here is the corrected Containerfile:
+
+```
+FROM docker.io/library/eclipse-temurin:17-jdk-jammy
+
+RUN apt-get update && \
+    apt-
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The error `stage 1 requires a FROM instruction ("")` means the Containerfile literally contains markdown code fences (`` ``` ``
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error and dead-end registry, the issue is twofold: (1) extra prose/text was contaminating the Containerfile, and
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+FROM docker.io/library/eclipse-temurin:17-jdk-jammy
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git
 - Fix 2 remaining code review issues on PR #18 in akashgit/buildroot-reconstructor.
 
 1. [Logic error] src/buildroot/agent/outer_loop.py around line 295 — After the _get_git_diff() fix, check_all() recei
+- Analyze the failure patterns and propose a CodeChangeHypothesis. Return a JSON object with: target_error_class, files_to_modify, expected_impact, rationale, and priority (integer).
 - Fix scope declaration in factory.md at /Users/akash/factory-projects/buildroot-reconstructor.
 
 The Reviewer flagged that knowledge base .md files under src/buildroot/agent/knowledge/ are outside the d
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The error `stage 1 requires a FROM instruction` means the Containerfile contained non-Dockerfile content (markdown prose, code 
+- Research solutions for Maven build failures, focusing on the dominant error pattern: unknown. Use web search to find relevant solutions, best practices, and debugging techniques. Produce a concise res
+- Generate prioritized hypotheses for /Users/akash/factory-projects/buildroot-reconstructor.
+
+Read the backlog at .factory/strategy/backlog.md — clear as many items as possible this cycle.
+Read the Hypo
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+FROM docker.io/library/eclipse-temurin:21-jdk
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git ca-ce
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The problem is that the "Containerfile" contains prose/explanatory text before the `FROM` instruction, causing the parser to fa
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The corrected Containerfile is now in place. Here's what was fixed:
+
+1. **Root cause**: The file contained markdown prose and c
+- Run a REAL end-to-end agentic reconstruction test on rh-h100-01 using the MERGED main branch.
+
+This is an OPERATIONAL task — you are EXECUTING the pipeline, not writing code.
+
+1. cd /Users/akash/facto
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The problem is clear: the `Dockerfile` on disk contains markdown prose wrapping the actual instructions, so the Docker parser n
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Now I have a clear picture. Micrometer is a **Gradle** project (not Maven). The fix is:
+
+1. Remove the invalid `` GHA expressio
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Good, the tag exists. Here is the corrected Containerfile:
+
+```
+FROM docker.io/library/amazoncorretto:17
+
+RUN yum install -y gi
 - Review the Builder's changes for experiment 7.
 Read the CEO's preliminary review at .factory/reviews/ceo-verdict-builder.md.
 1. Run guard check: factory guard /Users/akash/factory-projects/buildroot-r
+- Research solutions for Maven build failures, focusing on the dominant error pattern: unknown. Use web search to find relevant solutions, best practices, and debugging techniques. Produce a concise res
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The error `stage 1 requires a FROM instruction` means prose text leaked into the Containerfile before the `FROM` line. The fix 
 - Mode 2 research for /Users/akash/factory-projects/buildroot-reconstructor. Read observations at .factory/strategy/observations.md if it exists.
 
 FOCUS: Issue #16 — Outer Loop: Cross-Package Improvemen
+- Review the Builder's changes for experiment 8.
+Read the CEO's preliminary review at .factory/reviews/ceo-verdict-builder.md.
+1. Run guard check: factory guard /Users/akash/factory-projects/buildroot-r
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at this, the error "stage 1 requires a FROM instruction" means the Containerfile on disk has prose/markdown text before
 - Run baseline eval for /Users/akash/factory-projects/buildroot-reconstructor. Execute: factory eval /Users/akash/factory-projects/buildroot-reconstructor. Parse and report composite score and per-dimen
+- Record the Builder's work for experiment 8.
+Read .factory/reviews/ceo-verdict-builder.md and the PR diff (gh pr diff 21).
+Write implementation notes to .factory/archive/. Then run: factory report-upda
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Confirmed — the file has prose and markdown code fences wrapping the actual Containerfile. Here's the corrected Containerfile:
+
+- Run the eval command for /Users/akash/factory-projects/buildroot-reconstructor.
+
+Execute this exact command:
+cd /Users/akash/factory-projects/buildroot-reconstructor && python eval/score.py
+
+Print the
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Confirmed: `gradle.properties` has `-XX:MaxPermSize=2048m` which is invalid on JDK 9+. Gradle 7.5.1 works fine with JDK 11. Her
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The error is clear: the Containerfile contains prose/markdown text (the "**Key fixes:**" section) after the Dockerfile instruct
+- Analyze the failure patterns and propose a CodeChangeHypothesis. Return a JSON object with: target_error_class, files_to_modify, expected_impact, rationale, and priority (integer).
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error and the dead-end registry, both `eclipse-temurin:17-jdk` and `amazoncorretto:17` are banned. The "stage 1 
+- Analyze the failure patterns and propose a CodeChangeHypothesis. Return a JSON object with: target_error_class, files_to_modify, expected_impact, rationale, and priority (integer).
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error, the issue is that prose text is being included before the `FROM` instruction. The dead-end registry forbi
+- Local analysis for /Users/akash/factory-projects/buildroot-reconstructor focused on replacing raw API calls with Claude Code agents (issue #19).
+
+Read observations at .factory/strategy/observations.md
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The error `stage 1 requires a FROM instruction` is caused by the preamble text line `Confirmed: Gradle project using Gradle 8.4
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the issue:
+1. The immediate error is markdown wrapping around the Containerfile
+2. Both `eclipse-temurin:17-jdk` and
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error and dead-end registry:
+
+1. The error `stage 1 requires a FROM instruction ("")` means markdown code fences
+- Run a REAL end-to-end agentic reconstruction test on rh-h100-01.
+
+This is an OPERATIONAL task — you are EXECUTING the pipeline, not writing code.
+
+1. cd /Users/akash/factory-projects/buildroot-reconst
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Here is the corrected Containerfile:
+
+```
+FROM docker.io/library/eclipse-temurin:17-jdk
+RUN apt-get update && \
+    apt-get ins
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+FROM docker.io/library/eclipse-temurin:17-jdk-jammy
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error, the issue is clear: the "Current Containerfile" contains markdown explanation text (the "**Key fixes:**" 
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Here's the corrected Containerfile:
+
+```
+FROM docker.io/library/eclipse-temurin:17-jdk
+
+RUN apt-get update && apt-get install -
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at this, there are two issues:
+
+1. The `stage 1 requires a FROM instruction` error means the Containerfile has invisibl
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+FROM docker.io/library/eclipse-temurin:17-jdk-jammy
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+FROM docker.io/library/eclipse-temurin:17-jdk-jammy
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git
+- Run baseline eval for /Users/akash/factory-projects/buildroot-reconstructor. Execute: factory eval /Users/akash/factory-projects/buildroot-reconstructor. Parse and report composite score and per-dimen
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The error `stage 1 requires a FROM instruction` means the Containerfile has non-Dockerfile preamble text (the line "Confirmed —
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error, the Containerfile content contains prose/markdown text before the `FROM` instruction, causing the parser 
 - Record the Strategist's decisions and CEO approval. Read .factory/strategy/current.md and .factory/reviews/ceo-verdict-strategist.md. Write a strategy snapshot to .factory/archive/strategies/. Update 
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Looking at the error, the issue is clear: the Containerfile contains prose text ("Good, the tag exists. Here is the corrected C
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The error indicates there's non-Dockerfile preamble text before the `FROM` instruction in the actual file on disk. I'll produce
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+FROM docker.io/library/eclipse-temurin:17-jdk-jammy
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+Here is the corrected Containerfile:
+
+```
+FROM docker.io/library/eclipse-temurin:17-jdk-jammy
+
+RUN apt-get update && \
+    apt-
+- Research solutions for Maven build failures, focusing on the dominant error pattern: unknown. Use web search to find relevant solutions, best practices, and debugging techniques. Produce a concise res
+- Fix the following Containerfile build failure.
+
+## Current Containerfile
+The error "stage 1 requires a FROM instruction" means the Containerfile contained non-Dockerfile content (the markdown code fen
+- Final archive for this factory cycle on /Users/akash/factory-projects/buildroot-reconstructor.
+1. Read full experiment history: factory history /Users/akash/factory-projects/buildroot-reconstructor
+2.
 - Record experiment 7 outcome (verdict: keep) for buildroot-reconstructor.
 1. Read experiment history: factory history /Users/akash/factory-projects/buildroot-reconstructor
 2. Write experiment note to .
 
-## Errors and Issues (50)
+## Errors and Issues (343)
+- Looking at the error, the Containerfile was corrupted with non-Dockerfile text before the `FROM` line. The dead-end registry also forbids `./gradlew build publishToMavenLocal -x test --no-daemon` and 
+- The current Containerfile content looks correct but the dead-end shows it failed 2x with this exact base image + empty content (i.e., the content wasn't actually written). Let me check the actual file
+- Now I understand the full picture. The Dockerfile on disk literally contains the markdown explanation and code fences — the extraction logic in `_extract_containerfile` should have stripped it but did
+- The "unknown" error class masking 2/3 failed packages decomposes into **four concrete, fixable root causes**:
+- | Root Cause | Impact | Fix Complexity |
+- The error `stage 1 requires a FROM instruction` means the file written to disk contained non-Dockerfile content (markdown prose, code fences, etc.) before the `FROM` line. The actual Dockerfile instru
+- The root cause is clear: the Dockerfile on disk still contains markdown prose (the "Here is the corrected Containerfile:" header, triple-backtick code fences, and explanation text). The previous "fix"
+- 1. **Removed all comments before FROM** — some Buildah versions misparse leading comments as a stage boundary, causing the `stage 1 requires a FROM instruction ("")` error.
+- The corrected Containerfile is now written. Here's a summary of the fixes:
+- 1. **Root cause fixed**: Removed all markdown prose, explanatory text, and code fences that were being interpreted as a malformed build stage. The file now starts with `FROM` at byte offset 0 (`46 52 
+- The fix: output a clean Containerfile with zero surrounding prose. Also, this is a **Gradle** project (Spring Security), not Maven. JDK 25 doesn't exist; Spring Security 5.8.x targets JDK 17. Using `a
+- Additionally, micrometer is a **Gradle** project (not Maven), so `mvn clean install` would fail even if the parsing issue was fixed.
+- - `docker.io/library/gradle:7-jdk17` — failed 1x (not exhausted)
+- The critical fixes:
 - I'll read the current formula and failing tests, then fix the assertions.
 - Clear. Two fixes needed:
+- The problem is clear — the Dockerfile on disk contains markdown prose and code fences (` ``` `) wrapping the actual Dockerfile instructions. The container runtime tries to parse `Here's the corrected 
+- The fix is simply to output the clean Containerfile content without any markdown:
+- Now I have a clear picture. It's a Gradle project (not Maven). The dead-end registry says `docker.io/library/eclipse-temurin:17-jdk` failed 2x, so I need to use a different image tag. Let me use `ecli
+- Now I'll write the corrected Containerfile. Key fixes:
+- **Two fixes applied:**
 - Let me check existing tests and verify the current ruff/mypy errors.
 - Now I have the full picture. Let me create tasks and implement all 5 phases. The key constraint: evaluator.py and jar_comparator.py are FIXED surfaces — I can only fix ruff/mypy errors in modifiable f
 - Phase 5: CLI flags, hygiene fixes, and comprehensive tests. Starting with CLI updates.
@@ -60,6 +528,30 @@ FOCUS: Issue #16 — Outer Loop: Cross-Package Improvemen
 - All ruff checks pass too (the remote must have fixed the evaluator.py ruff errors). Now push and create the PR:
 - - `failure_analyst.py`: Batch analysis with error class aggregation, exhausted/under-explored classification, AutoScientists stagnation trigger (≥8 failures in ≤3 classes)
 - - Fixed all ruff errors in modifiable files
+- Looking at the error, the problem is that the "current Containerfile" contains prose/explanation text before the actual `FROM` instruction, causing the Docker parser to fail with "stage 1 requires a F
+- **Key fixes:**
+- **Fixes applied:**
+- Looking at this, the core problem is that the "Containerfile" content includes markdown prose before the `FROM` instruction, causing the "stage 1 requires a FROM instruction" error. I also need to avo
+- 1. **Primary error**: Containerfile has prose text before `FROM` — must start cleanly with `FROM`
+- **Key fixes:**
+- The error "stage 1 requires a FROM instruction" means the Containerfile contained non-Dockerfile content (the markdown code fences ` ``` `) before the `FROM` line. I'll produce a clean Containerfile w
+- The project is Gradle-based (not Maven), and also has a GHA expression that won't work. Here's the fix:
+- **Three issues fixed:**
+- 2. **Removed broken GHA expression**: `ENV GH_TOKEN=${{ secrets.GITHUB_TOKEN }}` uses a GitHub Actions expression that doesn't work in Containerfiles — removed entirely (it's not needed for the build)
+- 1. The error `stage 1 requires a FROM instruction ("")` has occurred with **5 different base images** - it's systematic
+- 3. Micrometer v1.10.13 is a **Gradle project** (not Maven!) - `mvn` would fail even if the parse issue were fixed
+- Looking at the error, the problem is clear: the Containerfile content included preamble/explanation text before the `FROM` instruction. The parser saw non-Dockerfile text as an invalid first stage, th
+- The fix is to output a clean Containerfile with no preamble. The base image `eclipse-temurin:17-jdk-focal` is not in the dead-end registry, so it's fine to use.
+- 2. **Removed all comments before FROM**: The FROM is the absolute first line — no comments, no blank lines, no BOM risk. This directly addresses the `stage 1 requires a FROM instruction ("")` Buildah 
+- 3. **Added `.git` suffix** to the clone URL for explicit git protocol handling.
+- Looking at the error and the dead-end registry:
+- 2. **Dead-end constraint**: ALL `eclipse-temurin:17-jdk*` variants (`17-jdk`, `17-jdk-jammy`, `17-jdk-focal`) have failed 2x each and must not be retried.
+- Good, the image exists. Now let me find where the Containerfile is and write the fix:
+- Looking at the error and the dead-end registry, I need to:
+- 1. Remove any trailing non-Dockerfile content causing the "stage 1 requires a FROM instruction" error
+- 2. Use a base image NOT in the dead-end registry (`eclipse-temurin:17-jdk` and `eclipse-temurin:17-jdk-jammy` both failed 2x)
+- The fix is to output **only** valid Dockerfile instructions with zero extra text.
+- I need to output a clean Containerfile with only valid Dockerfile instructions. The dead-end registry prohibits `docker.io/library/eclipse-temurin:17-jdk` (no OS suffix), but `eclipse-temurin:17-jdk-j
 - I'll start by reading the project configuration files and the issue details, then examine the specific files that need fixes.
 - Now I have full context on all 5 issues. Let me fix them all.
 - **Fix 1 & 3:** Updating `_get_git_diff` to return full unified diff scoped to changed files, and updating the call site.
@@ -71,16 +563,93 @@ FOCUS: Issue #16 — Outer Loop: Cross-Package Improvemen
 - All 5 code review fixes committed and pushed to `feat/outer-loop-17`. Summary of changes:
 - 1. **`_get_git_diff` → full unified diff** — Removed `--name-only` so `scan_leakage()` gets `+`-prefixed lines to check
 - 5. **`scan_leakage` coordinate filtering** — Coordinate regex now runs against added lines only (`+`-prefixed), consistent with `leakage_patterns` below
+- Looking at this, the error `stage 1 requires a FROM instruction ("")` persists across all `eclipse-temurin` variants in the dead-end registry. The fix is to use a completely different base image. I'll
+- 3. **No root cause extraction** — the analyzer classifies but doesn't extract the specific entity that failed
+- 4. **The builder is stateless** — it can't track error history or adapt across iterations
+- 5. **No two-phase diagnosis** — the builder tries to understand AND fix in one shot
+- Looking at the error: `stage 1 requires a FROM instruction ("")` — the problem is that the descriptive text paragraph before the `FROM` line is being parsed as Containerfile content, creating an inval
+- The fix is simply to remove that preamble text. The rest of the Containerfile logic is sound.
+- **What was wrong:** The file contained only markdown prose (error analysis summary text with `**bold**` formatting) and zero Dockerfile instructions. The Docker parser couldn't find a `FROM` instructi
+- **What the fix does:** Replaces the prose with a valid Containerfile that:
+- Let me investigate the actual issue more deeply - the `stage 1 requires a FROM instruction ("")` error has persisted across many attempts.
+- 5. **Python subprocess pattern** — complete `spawn_claude_agent()` reference implementation with timeout, error handling, temp file management
+- 9. **Agent SDK vs subprocess** — recommends subprocess for debuggability and structured output support
+- 10. **Error handling patterns** — exit codes, JSON-level errors, timeout handling, common failure modes
+- Good. The `spawn_claude_agent` already supports `allowed_tools` and constructs `--allowedTools` correctly. Now I'll implement both fixes.
+- Now add the unexpected-file-modification check after the agent completes. I'll add it right after the error handling block and before the changes dict is built.
+- Dependency not installed locally, but the import path itself is fine — the error is `ruamel.yaml` not being available, not anything related to my changes. Let me do a syntax check instead.
 - - `llmloop-iterative-feedback.md` — per-error-type feedback loops
+- 1. **Analyzer produces `fix_suggestion` but it never reaches the Builder** — the loop logs it at line 140 but doesn't pass it to `builder.refine()`
+- 2. **Builder receives only `error_summary` (truncated)** — the rich `build_log` with actual error lines never flows to the builder prompt
+- 3. **No error trajectory awareness** — builder can't detect that the same error keeps repeating or that fixes are oscillating between two error states
+- 1. **`extract_build_log_excerpt()`** — Extracts the most relevant error-context lines (±2 lines around `[ERROR]`, `FAILURE`, `Exception`, etc.) from build logs. Falls back to the tail of the log when 
+- 2. **`detect_error_loop()`** — Detects when the error-class sequence shows repeating patterns: same error 3+ times (stagnation) or A-B-A-B oscillation. Returns a flag and human-readable description.
+- 3. **`build_remediation_context()`** — The key architectural bridge. Packages the analyzer's fix suggestion, key build log lines, and error trajectory/loop warnings into a single structured context bl
+- Looking at the error, "stage 1 requires a FROM instruction" is caused by trailing content being parsed as a second build stage. The Containerfile content itself is sound — the fix is ensuring a clean 
+- Looking at the error, the issue is that the Containerfile likely contains markdown code fences or GHA expressions that cause a parse failure (`stage 1 requires a FROM instruction ("")`). Let me check 
 - 1. **Experiment note** written to `.factory/archive/experiments/buildroot-reconstructor-007.md` — full details including hypothesis, 5 new modules, 3 modified modules, 7 test files (143 new tests), CE
+- Looking at this issue, the `stage 1 requires a FROM instruction ("")` error happens consistently across ALL base images, which means the root cause isn't the base image — it's likely invisible charact
+- Looking at the errors:
 - I'll fix both code review issues: remove the duplicate root-level `packages_smoke.txt` and update the `FIXED_SURFACES` reference in `guards.py`.
 - Only `guards.py:39` has the wrong path. Now applying both fixes.
 - Changes look correct. Let me stage the guards.py change and commit both fixes together.
 - Both issues fixed and pushed:
 - 2. **Updated** `guards.py:39` `FIXED_SURFACES` to reference `results/packages_smoke.txt` instead of `packages_smoke.txt`
+- The build error `stage 1 requires a FROM instruction ("")` means the Containerfile literally contains markdown code fences (`` ``` ``), which the container runtime interprets as stage separators. Let 
+- The error is clear: the Containerfile was written with markdown code fences (`` ``` ``) literally in the file. The container runtime sees the first ``` line, then tries to parse the second ``` as a ne
+- Now let me look at the successful attempts (ones that got past the FROM error) to understand the real build issues:
+- Let me investigate the project structure and the actual error more carefully.
+- Looking at this problem, the `stage 1 requires a FROM instruction ("")` error has occurred 6 times across 3 different base images. This is clearly a systematic issue, not an image-specific one. Let me
+- Looking at the error `stage 1 requires a FROM instruction ("")`, this indicates the Containerfile was written with markdown code fences or other non-Dockerfile content that the container runtime tried
+- Now I have a clear picture. Micrometer is a **Gradle** project (not Maven). The fix is:
+- Looking at the errors:
+- The error `stage 1 requires a FROM instruction` means the Containerfile contained non-Dockerfile content (markdown prose, code fences) before the `FROM` line. The fix is to output only valid Dockerfil
+- Looking at the error, the issue is that prose/explanatory text before the `FROM` instruction got included in the Containerfile. The fix is to ensure the Containerfile starts cleanly with `FROM` as the
 - 1. **tests/test_outer_strategist.py:48 — Bug (incorrect test assertion)**
 - 2. **tests/test_outer_strategist.py:55 — Bug (formula mismatch in test)**
 - 3. **src/buildroot/agent/outer_loop.py:~300 — Logic error (diff format mismatch in `check_all`)**
+- Two fixes applied:
+- Looking at the error and dead-end registry:
+- 1. **Error**: `stage 1 requires a FROM instruction ("")` — the file on disk likely has non-Dockerfile content (markdown fences, etc.)
+- 2. **Dead-end**: `FROM docker.io/library/eclipse-temurin:17-jdk` failed 2x — must use a different image tag
+- Now I have full context. Here's the corrected Containerfile. The three key fixes are:
+- | Issue | Root Cause | Fix |
+- **Key fixes:**
+- Looking at the error and the dead-end registry, all three `eclipse-temurin` variants have failed 2x each with the same parsing error. I need to use a completely different base image to avoid dead ends
+- Now I understand the project. It uses Gradle 7.5.1 with JDK 8 toolchain for compilation. The parsing error is about the Containerfile format, and all `eclipse-temurin` variants are dead-ended. I need 
+- The error `stage 1 requires a FROM instruction` means the Containerfile has non-Dockerfile preamble text (the line "Confirmed — this is a Gradle project...") before the `FROM` instruction. The build e
+- Looking at the error, the problem is clear: the "Containerfile" contains prose/explanation text before and around the actual Dockerfile instructions, causing the parser to see invalid stages. The fix 
+- **Fixes applied:**
+- The problem is clear: the Containerfile contains markdown prose and code fences (`` ``` ``) that are not valid Dockerfile instructions. The builder sees the prose lines before `FROM` and fails. The fi
+- The corrected Containerfile is now clean. Here's the root cause and fix:
+- **Fix:** Stripped all non-Dockerfile content — the explanatory prose and the markdown `` ``` `` fences — leaving only valid Dockerfile instructions. The actual build logic is unchanged:
+- The two fixes:
+- 1. **Removed trailing prose** — the explanatory markdown (`**Three issues fixed:**...`) was embedded in the Containerfile content, causing the parser to fail with "stage 1 requires a FROM instruction.
+- Looking at the errors:
+- - **outer_strategist.py**: Kept `spawn_claude_agent`-based strategist with JSON schema, `_fallback_hypothesis`, and research report support (main's `_propose_for_error_class` heuristic strategies are 
+- 1. The Dockerfile contains markdown prose (not just Dockerfile instructions), causing the parse error
+- **Two fixes applied:**
+- Looking at this, the error `stage 1 requires a FROM instruction ("")` is a Buildah/Podman parse error. The root cause is that the Containerfile has non-comment plain text before the `FROM` instruction
+- The fix is to remove the preamble text so the Containerfile starts cleanly with `FROM`.
+- Here's the corrected Containerfile with three fixes:
+- Looking at the error, the problem is clear: the "Current Containerfile" contains prose/explanation text before the `FROM` instruction. The build tool is reading that prose as stage content without a `
+- The error `stage 1 requires a FROM instruction ("")` means the container runtime is seeing content before/after the valid Dockerfile that it interprets as a second stage. This is typically caused by m
+- Looking at the error and the dead-end registry, the root problem is **not** the base image — the same "stage 1 requires a FROM instruction" error occurs with every image tried. This is a Containerfile
+- Looking at the errors:
+- **Fixes applied:**
+- 1. **Replaced markdown text with actual Containerfile instructions** — this is the core fix for the parse error
+- Looking at the error and dead-end registry, the issue is twofold:
+- 1. The build system previously emitted non-Dockerfile prose mixed with instructions (causing the "stage 1 requires a FROM instruction" parse error).
+- Looking at the error, the Containerfile has prose text before the `FROM` instruction, causing the parse failure. I need to output a clean Containerfile starting directly with `FROM`. I'll also use `de
+- The fix is to write only the actual Dockerfile instructions:
+- **Fix**: Stripped all non-Dockerfile content so the file contains only valid Dockerfile instructions starting with `FROM`.
+- Looking at this issue, the `"stage 1 requires a FROM instruction ("")"` error has occurred with **6 different base images** — this is clearly not an image availability issue but a Containerfile parsin
+- The problem is clear — the Dockerfile on disk literally contains prose/commentary text both before the `FROM` line and after the build step. That's why every attempt fails with the same "stage 1 requi
+- **Fixes:**
+- Looking at the error and dead-end registry:
+- 1. The error `stage 1 requires a FROM instruction ("")` means markdown code fences are being included in the Containerfile — must output raw Containerfile only.
+- 2. The dead-end says `FROM docker.io/library/eclipse-temurin:17-jdk` failed 2x, so I need a different image tag.
+- Looking at the error `stage 1 requires a FROM instruction`, the root cause is that extra prose/text was included before the `FROM` line, causing the container build tool to interpret it as a malformed
 - I'll read the current code and the PR comments to understand the exact issues, then fix them.
 - I can see both issues clearly. Let me fix them.
 - Now fix the caller in `outer_loop.py` to pass `file_names`:
@@ -88,19 +657,198 @@ FOCUS: Issue #16 — Outer Loop: Cross-Package Improvemen
 - All tests pass. Now let me add a test that exercises the new `file_names` parameter to verify the fix works correctly — passing a unified diff as `diff_output` while using `file_names` for surface che
 - Done. Both fixes are committed and pushed to `feat/outer-loop-17`:
 - 2. **Swallowed exception fixed**: `_get_git_diff()` now logs a warning with the traceback via `logger.warning(..., exc_info=True)` before returning the empty string, making it visible when guards are 
+- The error is clear: the Containerfile contains prose/markdown text (the "**Key fixes:**" section) after the Dockerfile instructions, causing the parser to fail. I need to output *only* valid Dockerfil
+- Now let me check the analyzer to understand the error classification:
+- Now I have full clarity on the failure pattern. Let me verify exactly what the analyzer produces for these errors by examining the patterns more carefully:
+- 1. **27/30 iterations** across both failed packages hit `"stage 1 requires a FROM instruction"` — this means Claude returned prose-wrapped Containerfiles, and `_extract_containerfile()` failed to extr
+- 4. The error classifier doesn't recognize `"stage 1 requires FROM"` or `"no POM in this directory"`, so everything gets classified as `"unknown"` with a useless fix suggestion.
+- 5. The fix targets **two files**: `builder.py` (robust extraction + validation) and `analyzer.py` (new error patterns for containerfile parse failures and wrong build tools).
+- **Target error class:** `unknown` (masking containerfile parse corruption in 90% of iterations)
+- | `src/buildroot/agent/analyzer.py` | Add `containerfile/parse_error` pattern (matches "requires a FROM instruction") and `build_tool/wrong_build_system` pattern (matches "gradle: not found", "no POM 
+- **Priority:** P0 — this is the single highest-leverage fix, unblocking 90% of wasted iterations and enabling the inner loop to reach actual build errors where existing logic can be effective.
+- **Fix:** Stripped all non-Dockerfile content (markdown preamble, code fences, and trailing explanation). The file now contains only valid Dockerfile instructions.
+- Looking at the error and the dead-end registry, I need to:
+- 2. Change the build command to avoid the dead-end (`gradlew build publishToMavenLocal -x test --no-daemon` failed 2x)
+- Now I understand the issue. The real problem was the comment block before `FROM` causing a parse error. I also need to avoid the dead-end combination. Let me produce a clean Containerfile:
+- Key fixes:
+- 1. **`FROM` is now the very first line** — The original Containerfile had a multi-line comment block (`# ====...`) before `FROM`, which caused the `stage 1 requires a FROM instruction` parse error. Re
+- The problem is clear: the Dockerfile contains markdown prose around the actual instructions, so Docker's parser can't find the `FROM` instruction. The fix is to write only valid Dockerfile content.
+- The corrected Containerfile is now written. Here's what was fixed:
+- **Fix:** Stripped all markdown/prose content, leaving only the valid Dockerfile instructions:
+- I'll start by examining the actual failure logs and codebase to understand what "unknown" errors look like, then research solutions.
+- The `unknown` error class was hiding **three distinct, well-understood root causes**:
+- The cycle 1 fix was **ineffective** due to two remaining bugs:
+- ### Priority Fixes for Strategist
+- Looking at the error and the dead-end registry, the root cause is trailing non-Dockerfile content being parsed as a second stage. I also need to use a base image not in the dead-end registry. Let me c
+- **Two fixes applied:**
+- 2. **Switched base image to `eclipse-temurin:17-jdk-focal`** — The previous base `eclipse-temurin:17-jdk-jammy` was in the dead-end registry (failed 2x). Using the Ubuntu 20.04 (Focal) variant instead
+- Looking at this, the core issue is prose text leaking before the `FROM` instruction, causing the "stage 1 requires a FROM instruction" error. Additionally, all four previously tried base images are de
+- The error `stage 1 requires a FROM instruction ("")` means the Containerfile was saved with markdown code fences (`` ``` ``) which the container runtime tried to parse as build instructions. The fix i
+- Let me investigate the Spring Security 5.8.9 project to understand its build requirements before fixing the Containerfile.
+- The `_extract_containerfile` function's Strategy 3 should strip preamble, but the issue is the prose is being fed back repeatedly. The fix is simple: I must output **ONLY** raw Containerfile instructi
+- Looking at the error and dead-end registry, the issue is twofold: (1) extra prose/text was contaminating the Containerfile, and (2) all previously tried base images are in the dead-end registry. I nee
+- **Two issues fixed:**
+- **Key fixes:**
+- 1. **Root cause fixed**: The file previously contained markdown prose (explanation text) instead of actual Dockerfile instructions, causing the `stage 1 requires a FROM instruction` error. Replaced wi
+- The pipeline ran all 5 iterations but failed to produce a working build. Let me check the output directory for the generated Containerfiles.
+- Looking at the error and constraints:
+- 1. **Error**: "stage 1 requires a FROM instruction" — caused by non-Dockerfile text before `FROM`
+- 2. **Dead-ends**: Both `eclipse-temurin:17-jdk` and `eclipse-temurin:17-jdk-jammy` are banned (failed 2x each)
+- 1. The on-disk file had markdown wrapping (causing the `FROM` parse error).
+- 2. `FROM docker.io/library/eclipse-temurin:17-jdk` is in the dead-end registry (failed 2x) — must use a different base image.
+- **Two fixes applied:**
+- 2. **Changed base image from `eclipse-temurin:17-jdk` to `eclipse-temurin:17-jdk-jammy`** — The dead-end registry shows `eclipse-temurin:17-jdk` failed 2x, so we use the explicit Ubuntu Jammy variant 
+- Looking at the error, the issue is clear: the Containerfile contains prose text ("Good, the tag exists. Here is the corrected Containerfile:") before the `FROM` instruction, which causes the build par
+- 1. The previous Containerfile had trailing markdown prose causing the parse error ("stage 1 requires a FROM instruction").
+- 2. The dead-end registry prohibits `docker.io/library/eclipse-temurin:17-jdk` (failed 2x).
+- 1. **Error**: `stage 1 requires a FROM instruction ("")` — the current "Containerfile" contains preamble text/comments before the FROM, which gets parsed as a broken stage.
+- 2. **Dead-end**: `FROM docker.io/library/eclipse-temurin:17-jdk` failed 2x — must use a different base image.
+- **Key fixes:**
+- 2. **Switched from `eclipse-temurin:17-jdk` to `eclipse-temurin:21-jdk`** — the dead-end registry shows `17-jdk` failed 2x. JDK 21 is a supported LTS that Spring Security 5.8.x can build against.
+- Looking at the errors:
 - Guard check failed with scope violations. Let me read the full diff and check the specific files flagged.
+- Now I see the problem clearly. The Containerfile contains prose text instead of just Containerfile instructions. Also, the dead-end registry blocks `ubuntu:22.04` with `gradlew publishToMavenLocal`. L
+- **Fixes applied:**
+- Looking at the error and the dead-end registry, all three `eclipse-temurin:17-jdk*` variants are banned. The root cause was prose/markdown leaking into the file, but I also need a different base image
+- Looking at the error and dead-end registry, the issue is twofold:
+- 1. The Containerfile had prose text before `FROM`, causing the "stage 1 requires a FROM instruction" parse error.
+- Looking at the errors:
+- Looking at the errors:
+- Looking at the errors:
+- I'll start by examining the existing failure taxonomy, build logs, and codebase to understand what "unknown" errors look like, then research solutions.
+- 1. The `stage 1 requires a FROM instruction` error means the Containerfile has invisible characters or prose before `FROM` — the file must start cleanly on line 1.
 - - **Meta-Harness** — validates that optimizing LLM harness code (prompts, error patterns, metadata extraction) is a tractable target, and full history exposure beats compressed summaries
+- Tests are failing with `ModuleNotFoundError: No module named 'buildroot'`. Let me check if this is a pre-existing issue or introduced by this PR.
+- Now let me verify the fixed surfaces weren't touched.
+- Good — no fixed surfaces touched. Now let me post the verdict.
+- The problem is clear — the Dockerfile has prose/markdown text before and after the actual instructions. The container runtime sees line 1 (`The file now starts...`) as a malformed stage, then `FROM` a
+- The Dockerfile is now clean. Here's what was fixed:
+- Looking at the error, the issue is that the Containerfile on disk contains prose/markdown text before the `FROM` instruction. The fix is to output a clean Containerfile starting directly with `FROM`. 
+- The problem is obvious — the Containerfile contains markdown prose after the actual Dockerfile instructions (lines 18-24), which the builder tries to parse as a second stage. The fix is to strip all n
+- **Fix:** Removed all non-Dockerfile content. The file now contains only valid Dockerfile instructions, starting with `FROM` on line 1 and ending cleanly after the build `RUN` command.
+- Looking at the error, the issue is clear: the Containerfile has prose/markdown text before the `FROM` instruction, causing the container runtime to fail parsing. The fix is to output a clean Container
+- I also note from the dead-end registry that `gradlew build publishToMavenLocal` already failed 2x, so I'll keep the `assemble` approach but ensure the file is clean.
+- Looking at this, the root cause is clear: the "Containerfile" being fed to the builder contains prose/markdown before the `FROM` instruction, causing the parser error. All 5 dead-end entries failed wi
+- Looking at this, the "Current Containerfile" has prose text and markdown before the actual Dockerfile instructions, causing the "stage 1 requires a FROM instruction" parse error. Additionally, `FROM d
+- # Fix: -XX:MaxPermSize was removed in JDK 8+; strip it from gradle.properties if present
+- The error `stage 1 requires a FROM instruction ("")` means the Containerfile has non-Dockerfile text before the `FROM` line (the "Confirmed:..." preamble was included as part of the file content). The
+- Looking at the dead-end registry, `FROM docker.io/library/eclipse-temurin:17-jdk` has failed 2x and must not be retried. The metadata specifies JDK 25. Let me check what's available and construct a wo
+- The one attempt that actually got past parsing (`eclipse-temurin:25-jdk`) failed because `gradle` wasn't installed — the fix is to use `./gradlew` (the repo's Gradle wrapper).
+- 1. **15 attempts, 14 failed with the same "stage 1 requires FROM" parsing error** across 7+ different base images — proving the issue is NOT the base image
+- The fix needs two things:
+- - Use `./gradlew` instead of `gradle` (fixes the "gradle: not found" from attempt 1)
+- The problem is clear — the Containerfile has prose text and markdown code fences mixed in with the actual Dockerfile instructions. The builder sees the prose as an invalid first stage with no `FROM`. 
+- # Fix: -XX:MaxPermSize was removed in JDK 8+; strip it from gradle.properties if present
+- Looking at this, the error is a Containerfile parse error ("stage 1 requires a FROM instruction") caused by extra prose text in the file. Additionally, all previously tried base images are in the dead
+- 1. **Parse error**: Extra prose/markdown text in the file causing "stage 1 requires a FROM instruction"
+- ### Part 2: analyzer.py — Add missing error patterns and fix suggestions
+- Now add the fix suggestions for the new error classes:
+- 1. **Added two new error patterns** at the top of `ERROR_PATTERNS` (high priority):
+- - `containerfile/parse_error` — matches "stage 1 requires a FROM instruction", "Dockerfile parse error", etc.
+- 2. **Added corresponding fix suggestions** in `_suggest_fix()` for both new error classes, providing actionable guidance instead of the generic "unknown" fallback.
+- Looking at the error and the dead-end registry, all three `eclipse-temurin:17-jdk*` variants have failed twice each. The parse error ("stage 1 requires a FROM instruction") likely stems from how the f
+- The "stage 1 requires a FROM instruction" error is a Podman/Buildah file-parsing issue, often caused by invisible characters, BOM markers, or comment blocks. Both banned images had the same error clas
+- The fix: produce a maximally clean Containerfile—no header comment block, no `ENV` with shell expansion, and use `ubuntu:22.04` (not banned). Also note this is a **Gradle** project, not Maven.
+- Now let me check for any results from the actual failed runs to validate my understanding:
+- The evidence is crystal clear. Let me verify one more thing about the error classification issue:
+- Now I'll propose the fix:
+- **Target:** `unknown` error class (2/3 packages, 100% of failures)
+- - **micrometer-core**: 1 real error (no POM), then 14 consecutive death spiral iterations
+- - **spring-security-core**: 1 real error (gradle not found), then 13/14 death spiral iterations. Notably, attempt 4 *escaped* the spiral momentarily and hit the real `MaxPermSize` error — proving reco
+- The error `stage 1 requires a FROM instruction` means prose text leaked into the Containerfile before the `FROM` line. The fix is to ensure the Containerfile starts cleanly with `FROM`. I'll also use 
+- **What was fixed:** Replaced the prose with actual valid Dockerfile instructions:
+- Looking at the error and the dead-end registry, the issue is twofold:
+- 2. `FROM docker.io/library/eclipse-temurin:17-jdk` is in the dead-end registry (failed 2x)
+- The corrected Containerfile is now in place. Here's what was fixed:
+- 1. **Root cause**: The file contained markdown prose and code fences wrapping the actual Dockerfile instructions. The build system saw the first line as `Looking at the issue:` instead of a `FROM` ins
+- 2. **Fix applied**: Stripped all markdown content, leaving only the valid Dockerfile instructions starting with `FROM`.
+- 2. **Dead-end**: `docker.io/library/eclipse-temurin:17-jdk` is banned (failed 2x). The `-jammy` variant is technically different but I'll avoid the entire `eclipse-temurin` family to be safe.
+- Looking at the errors:
+- Let me check what images are available and craft a clean fix:
+- The fix: use a base image with JDK pre-installed (eliminating `${...}` ENV vars entirely), avoid any quoting that could confuse the heredoc/SSH pipeline, and keep the Containerfile absolutely minimal.
+- The root cause is that the "Current Containerfile" contains prose text and markdown fences before/around the `FROM` instruction, so the container runtime can't parse it. The fix is a clean Containerfi
+- Looking at the error, the issue is clear: the Containerfile has leading plain text before the `FROM` instruction, causing the build engine to interpret it as a stage without `FROM`. I also need to avo
+- **Fixes applied:**
+- The error is clear: the "Containerfile" contains prose text ("Good. Now here's the corrected Containerfile:" and markdown fences) before the `FROM` instruction, causing the parser to fail. I need to o
+- 4. **No dead ends** — the agent solved it on the first try with no failed iterations.
+- Looking at the error `stage 1 requires a FROM instruction ("")`, the problem is that extraneous content (the markdown explanation text) was included in the Containerfile. The fix is to output *only* v
+- The corrected Containerfile is now in place. Here's the summary of the fix:
+- **Fix:** Stripped all non-Dockerfile content — the explanatory prose, markdown formatting, and code fence delimiters — leaving only valid Dockerfile instructions starting with comments and the `FROM` 
+- The error `stage 1 requires a FROM instruction ("")` means there's non-Dockerfile content (prose text) before the `FROM` line. The fix is to output only valid Containerfile instructions. The `gradle:7
+- Looking at the error, the root cause is that the Containerfile written to disk contained prose/markdown instead of pure Dockerfile instructions. The "stage 1 requires a FROM instruction" error confirm
+- # Fix: -XX:MaxPermSize was removed in JDK 8+; strip it from gradle.properties if present
 - 1. **Failure Analyst + Knowledge Base** — aggregate cross-package errors, classify exhausted vs under-explored, inject learned patterns into inner loop Builder
 - 4. **Orchestrator + Code Mutation Builder** — replace dumb for-loop with analyze→strategize→fix→re-evaluate cycle
 - 5. **CLI + Hygiene fixes** — new flags, fix 14 mypy errors and 7 ruff errors
+- Looking at this, the "Current Containerfile" actually contains prose text before the `FROM` instruction (the paragraph starting with "Looking at the error..."). That's what causes the parse failure. I
+- The root cause is clear: prose text before `FROM` causes the parse error. I also need to pick a base image not in the dead-end list. Here's the corrected Containerfile:
+- Looking at the error and the dead-end registry, the issues are:
+- 1. **Parse error**: Trailing non-Dockerfile content caused "stage 1 requires a FROM instruction"
+- Only the builder subprocess tests failed — the `BuildrootSpec` constructor doesn't accept `coordinate`. Let me check the actual model.
+- I see — `coordinate` isn't a field on `BuildrootSpec`, and `build_commands` is a `list[str]`, not a `str`. Let me fix the test helper:
+- Just one test failure — the `task` is passed as a keyword arg. Let me fix the test.
+- Looking at the errors:
+- The problem is clear: the `Dockerfile` on disk contains markdown prose wrapping the actual instructions, so the Docker parser never finds a `FROM` line. The fix is to emit **only** valid Dockerfile in
+- Looking at this problem, the error `stage 1 requires a FROM instruction ("")` has occurred with **every** base image tried (4 different ones, 11+ total attempts). This confirms the issue is in the Con
+- The fix strategy:
+- The error "stage 1 requires a FROM instruction" means the previous Containerfile had non-Dockerfile content (the markdown explanation text and code fences) that the parser tried to interpret as Docker
+- The error `stage 1 requires a FROM instruction ("")` means there are invisible/non-printable characters before the `FROM` line in the actual file. I'll produce a byte-clean Containerfile. I'll also ad
+- **Root cause:** The project is a **Gradle** project (it has `build.gradle`, `settings.gradle`, and a `gradlew` wrapper), not a Maven project. There is no `pom.xml`, which is why `mvn` failed with "no 
+- **Fix applied:**
+- Looking at the code, the persistent `stage 1 requires a FROM instruction ("")` error happens across ALL images, which means it's a content/encoding issue with how the Containerfile is written to disk 
+- Looking at the error, the problem is clear: the Containerfile contains markdown prose/explanation text before the `FROM` instruction, causing the parser to see non-instruction content and fail with "s
+- #### 2b. Add suggestion for the new error class
+- 1. **New error pattern** — Added `environment/obsolete_jvm_flag` matching `Unrecognized VM option|MaxPermSize|PermSize|Unrecognized option:.*-XX:`
+- 2. **New fix suggestion** — Added actionable guidance to remove obsolete flags via `sed` or switch to JDK 8
+- The error is clear: removing the Gradle Enterprise plugin from `settings.gradle` also removes the `retry()` DSL extension it provides to `Test` tasks. We need to also strip the `retry { ... }` block f
+- The fix is to output **only** the valid Containerfile instructions:
+- # Fix: -XX:MaxPermSize was removed in JDK 8+; strip it from gradle.properties
+- Looking at the error and dead-end registry, the issue is twofold:
+- Now I understand the root cause. The `${{ }}` GitHub Actions expressions in the ENV lines are causing the Containerfile parser to fail with "stage 1 requires a FROM instruction". This is consistently 
+- **Key fixes:**
+- 1. **Clean file format**: The original error (`stage 1 requires a FROM instruction`) indicates the file had non-Dockerfile content (markdown prose, code fences, etc.) before the `FROM` line. The corre
+- The error indicates there's non-Dockerfile preamble text before the `FROM` instruction in the actual file on disk. I'll produce a clean Containerfile starting directly with comments/FROM, and keeping 
+- Looking at the error and the dead-end registry, I need to:
+- 1. Avoid `docker.io/library/eclipse-temurin:17-jdk` as a FROM (failed 7x with empty/malformed Containerfile)
+- 2. Avoid `gradlew build publishToMavenLocal` (failed 2x)
+- 1. The error "stage 1 requires a FROM instruction" means the file had non-Dockerfile content before FROM
+- 2. Must avoid `docker.io/library/eclipse-temurin:17-jdk` (dead-ended, failed 7x)
+- 3. Must avoid `gradlew build publishToMavenLocal -x test` (dead-ended, failed 2x)
+- The problem is that the "Containerfile" contains prose/explanatory text before the `FROM` instruction, causing the parser to fail. The fix is to output only valid Containerfile instructions. I also no
+- Looking at the error and constraints:
+- 1. **Error**: `stage 1 requires a FROM instruction ("")` — the file likely has invisible preamble characters or the description text before `FROM` confused the parser.
+- 2. **Dead-end**: `docker.io/library/eclipse-temurin:17-jdk` failed 2x — must use a different base image.
+- 1. **Root cause of parse error**: `${{ secrets.GITHUB_TOKEN }}` — GHA expression breaks the Dockerfile parser
+- 1. The immediate error is markdown wrapping around the Containerfile
+- This fixes both problems:
+- Looking at the error and the dead-end registry, the same parsing error ("stage 1 requires a FROM instruction") has occurred across **all** base images tried, which means it's a content/formatting issu
+- **Two fixes applied:**
+- 2. **Changed base image from `eclipse-temurin:17-jdk` → `eclipse-temurin:17-jdk-jammy`**: The dead-end registry shows `eclipse-temurin:17-jdk` failed 2x, so we use the explicit `-jammy` variant (same 
+- Let me first examine the actual build logs and failure details to understand what these "unknown" errors actually are.
+- Now let me examine the Containerfile generation and the agent code to understand how these errors arise:
+- The "unknown" error classification was masking **three distinct, well-understood failure modes**:
+- | Root Cause | Frequency | Fix |
+- | **Gradle misidentified as Maven** — both failed packages (micrometer, spring-security) are Gradle projects | 2/30 attempts | Build system detection + Gradle template |
+- Looking at the error and dead-end registry, I need to avoid both `eclipse-temurin:17-jdk` and `gradle:8.4-jdk17` base images. The "stage 1 requires a FROM instruction" error suggests parsing issues wi
+- 1. The "stage 1 requires a FROM instruction" error suggests the file has content that creates an empty/invalid stage (likely trailing content or invisible characters)
+- Looking at the dead-end registry, `FROM docker.io/library/eclipse-temurin:17-jdk` has failed 2x and must not be retried. I need to use a different base image while keeping JDK 17 (appropriate for Spri
+- Looking at the error and dead-end registry:
+- 1. **Error**: "stage 1 requires a FROM instruction" — likely the file has invisible characters or the build engine is choking on the image reference.
+- 2. **Dead-ends**: Both `eclipse-temurin:17-jdk` and `eclipse-temurin:17-jdk-jammy` failed 2x — must use a different base image.
 
 ## Similar Projects
 No similar projects found.
 
 ## Open GitHub Issues
 
-### Your Issues (7) — actionable, may generate fix hypotheses
+### Your Issues (10) — actionable, may generate fix hypotheses
 
+- **#24** Node-scoped agents: Claude Code reviewer at every pipeline step [enhancement] (by @akashgit)
+  > ## Summary  Attach a scoped Claude Code agent at every node of the deterministic pipeline. Each agent reviews and improves the node's output before passing it downstream. The deterministic pipeline produces a draft; the agents gate and refine it. This replaces the current approach where failures are
+- **#23** Add buildroot benchmark CLI command for batch L1-L4 evaluation [enhancement] (by @akashgit)
+  > ## Problem  There is no CLI command to run the full Level 1-4 verification pipeline across a batch of packages. The original 10-package Level 4 results were produced by running each package manually. With the benchmark set expanding to 33+ packages, this needs to be a single command.  ## Proposed CL
+- **#22** Replace LLM Containerfile rewriting with evidence-based gap filling [enhancement] (by @akashgit)
+  > ## Problem  The current agentic inner loop gives the LLM full control over the Containerfile — it rewrites the entire file on every iteration. This causes:  1. **Regression on solved packages**: spring-security-core was EQUIVALENT with the deterministic template but the agentic Builder corrupts it (
 - **#19** Replace raw API calls with Claude Code agents across inner and outer loops [implementation] (by @akashgit)
   > ## Problem  Every agent in the system that needs to write code, research, or reason currently calls the Anthropic API directly via `AnthropicVertex` — a single-shot text completion with no tools. This is fundamentally wrong. The factory pattern spawns Claude Code as a full subprocess (`claude --appe
 - **#13** Design: Agentic Reconstructor with Inner/Outer Loop Architecture [enhancement] (by @akashgit)
@@ -118,14 +866,14 @@ No similar projects found.
 
 ## Backlog
 
-**TARGETED MODE** — building exactly one item: Replace raw API calls with Claude Code agents across inner and outer loops (issue #19)
+**TARGETED MODE** — building exactly one item: Node-scoped agents: Claude Code reviewer at every pipeline step (issue #24)
 
-- Replace raw API calls with Claude Code agents across inner and outer loops (issue #19)
+- Node-scoped agents: Claude Code reviewer at every pipeline step (issue #24)
 
 ## Observability Coverage
-- **Score:** 58.0%
-- **Function coverage:** 34/220 functions have logging (16%)
-- **Total log statements:** 100
+- **Score:** 61.2%
+- **Function coverage:** 44/238 functions have logging (18%)
+- **Total log statements:** 140
 - **Structured logging:** Yes
 - **Request tracing:** Yes
 
@@ -139,7 +887,7 @@ No similar projects found.
 - src/buildroot/cli/commands/compare.py (1 functions, 0 log statements)
 
 ### Observability Recommendations
-- Improve logging coverage: only 34/220 functions (15%) have log statements
+- Improve logging coverage: only 44/238 functions (18%) have log statements
 - Add logging to uninstrumented files: src/buildroot/agent/models.py (8 functions, 0 log statements), src/buildroot/cli/main.py (1 functions, 0 log statements), src/buildroot/cli/commands/validate.py (2 functions, 0 log statements), src/buildroot/cli/commands/inspect_cmd.py (1 functions, 0 log statements), src/buildroot/cli/commands/reconstruct.py (1 functions, 0 log statements)
 
 ## Prior Knowledge (Obsidian)
